--- a/application/package.json
+++ b/application/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
