--- a/application/package.json
+++ b/application/package.json
@@ -14,6 +14,8 @@
   "types": "./dist/index.d.ts",
   "description": "",
   "dependencies": {
+    "@grpc/grpc-js": "^1.13.4",
+    "@hyperledger/fabric-gateway": "^1.7.1",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
