--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -9,7 +9,17 @@
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "typeRoots": [
+      "./node_modules/@types",                           /* Specify multiple folders that act like `./node_modules/@types`. */
+      "./src/types"                                      /* Custom types directory. */
+    ],
   },
-  "include": ["./src/**/*"],
+  "include": [
+    "./src/**/*",
+    "./src/types/**/*",
+  ],
+  "ts-node": {
+    "files": true
+  }
 }
