api/feat: add anomaly evaluation

--- a/application/.env
+++ b/application/.env
@@ -2,3 +2,4 @@ CHANNEL_NAME=mychannel
 CHAINCODE_NAME=basic
 CREDENTIAL_DIR=../credentials
 FABRIC_CA_CLIENT_BINARY=../fabric-samples/bin/fabric-ca-client
+MARITIME_BORDER_CHECKER_SCRIPT=../maritime-border-checker/maritime-border-checker.py
